<?xml version="1.0" encoding="utf-8"?>
<resources>

  <!--<string name="facebook_app_id">1611460479083904</string>-->
  <string name="server_client_id" translatable="false">986604026453-rh7t39rpf62ospjqhu1417svdffikau1.apps.googleusercontent.com</string>
  <string name="facebook_app_id">1640378969545902</string>
  <string name="app_id_string">com.mobile.android.smartick</string>
  <string name="app_name">Smartick</string>
  <string name="title_activity_login">login</string>
  <string name="title_activity_intro">intro</string>
  <string name="title_activity_freemium">freemium</string>
  <string name="title_activity_registro">registro</string>
  <string name="Student">Student</string>
  <string name="Students">Students</string>
  <string name="Tutor">Tutor</string>
  <string name="Boy">Boy</string>
  <string name="Girl">Girl</string>
  <string name="Guest">Guest</string>
  <string name="Register">Try it for free!</string>
  <string name="Choose_your_avatar">Choose your avatar</string>
  <string name="Use_this_avatar_int">Use this avatar?</string>
  <string name="How_old_are_you_int">How old are you?</string>
  <string name="OK_ex">OK!</string>
  <string name="answer_correclty">Answer correctly and obtain ticks in order to get lots of stuff at the Virtual World!</string>
  <string name="Date_of_birth">Date of birth</string>
  <string name="Is_this_correct_int">Is this correct?</string>
  <string name="Tutor_info">Tutor info</string>
  <string name="Alias">Username</string>
  <string name="Mail">Email</string>
  <string name="Username">Username</string>
  <string name="FullName">FullName</string>
  <string name="Birth_date">Age</string>
  <string name="Password">Password</string>
  <string name="Name">Name</string>
  <string name="Last_name">Last name</string>
  <string name="Phone">Phone</string>
  <string name="Invalid_username">Invalid username</string>
  <string name="Fill_in_the_fields_to_contiune">Fill in the fields to contiune</string>
  <string name="Invalid_mail_address">Invalid email address</string>
  <string name="Invalid_phone_number">Invalid phone number</string>
  <string name="Learn">Learn</string>
  <string name="With_a_revolutionary_method">With a revolutionary method</string>
  <string name="Whenever_you_want">Whenever you want</string>
  <string name="fifteen_minutes_per_day">15 minutes per day</string>
  <string name="At_your_own_pace">At your own pace</string>
  <string name="Smartick_adapts_to_you_not_otherwise">Smartick adapts to you, not the other way around</string>
  <string name="Improve">Improve</string>
  <string name="Unlock_your_full_potential">Unlock your full potential</string>
  <string name="Dominate_math">Master math</string>
  <string name="Learn_to_think">Learn to think</string>
  <string name="Mental_calculation_reasoning_and_reading_comprehension">Mental calculation, reasoning and reading comprehension</string>
  <string name="Anywhere_and_anytime">Anywhere and anytime</string>
  <string name="Start_today">Start today</string>
  <string name="Start">Start</string>
  <string name="Start_ex">Start!</string>
  <string name="Discover_it">Discover it >></string>
  <string name="Slide_to_discover_it">&lt;&lt; Slide to discover it</string>
  <string name="Username_already_in_use">Username already in use</string>
  <string name="Username_is_not_valid">Username is not valid</string>
  <string name="Notice">Notice</string>
  <string name="New_student">New student</string>
  <string name="New_tutor">New tutor</string>
  <string name="Tutors">Tutors</string>
  <string name="Add_student">Add student</string>
  <string name="Add_tutor">Add tutor</string>
  <string name="Login_as_other_Student">Another Student</string>
  <string name="Login_as_other_Tutor">Another Tutor</string>
  <string name="plusInfo">+ Info</string>
  <string name="I_already_use_Smartick">Log in</string>
  <string name="Loading">Loading</string>
  <string name="Edit">Edit</string>
  <string name="Finished">Finished</string>
  <string name="Add">Add</string>
  <string name="Cancel">Cancel</string>
  <string name="No_registered_tutors">No registered tutors</string>
  <string name="Unknown_user">Unknown user</string>
  <string name="Incorrect_password">Incorrect password</string>
  <string name="User_does_not_have_an_active_subscription">User does not have an active subscription</string>
  <string name="OK">OK</string>
  <string name="Delete_someone_data">Delete %1$s data?</string>
  <string name="someon_data_will_be_deleted_from_this_device">%1$s\'s data will be deleted from this device</string>
  <string name="No_continue">No, continue</string>
  <string name="Yes">Yes</string>
  <string name="No">No</string>
  <string name="Wait_a_moment">Wait a moment</string>
  <string name="Add_another_student_before_continuing_int">Add another student before continuing?</string>
  <string name="num_day_left">%1$d day/s left</string>
  <string name="someone_dont_forget_to_do_your_daily_session_ex">%1$s, don\'t forget to do your daily session!</string>
  <string name="You_must_be_connected_to_the_internet">You must be connected to the internet</string>
  <string name="Skip">Skip</string>
  <string name="Proceed">Proceed</string>
  <string name="Continue">Continue</string>
  <string name="Exit">Exit</string>
  <string name="Access_Virtual_World">Access Virtual World</string>
  <string name="Restart_session">Restart session</string>
  <string name="Exit_anyway">Exit anyway</string>
  <string name="lose_progress">If you go back you will lose your progress and will have to start from the beginning.</string>
  <string name="Personal_room">Personal room</string>
  <string name="Social_Club">Social Club</string>
  <string name="School">School</string>
  <string name="Shop">Shop</string>
  <string name="Mathgicians">Mathgicians</string>
  <string name="Your_Avatar">Your Avatar</string>
  <string name="Go_inside">Go inside</string>
  <string name="Go_back">Go back</string>
  <string name="vw_room">This is your house, which you can decorate and set up any way you feel like.</string>
  <string name="vw_social">At the Social Club you can access you friend list, check Smartick’s weekly ranking and even visit your friend’s houses.</string>
  <string name="vw_school">Check on your progress, review some tutorials or just compete against your friends on custom mathematical trials tailored just for you.</string>
  <string name="vw_shop">Buy avatar accessories, stuff for your room, presents for your friends or even pets that will follow you anywhere you go on Smartick.</string>
  <string name="vw_mathgicians">Meet the Mathgicians, who will teach you fun tricks and mathematical riddles. Discover them all!.</string>
  <string name="vw_avatar">Create and customize your avatar they way you like it. There are tons of different accessories you can buy at the Smartick shop for you and your friends.</string>
  <string name="already_completed_freemium_session">You\'ve already completed today\'s guest session. If you restart it you won\'t be able to access the Virtual World until you complete it again.</string>
  <string name="Smartick_Games">Smartick Games</string>
  <string name="vw_games">Improve your habilities by playing our special selection of games, which will help you training your brain in different areas while having a blast!.</string>
  <string name="Warning">Warning</string>
  <string name="Go_back_to_login_int">Go back to login?</string>
  <string name="leave_vw_int">Leave the Virtual World?</string>
  <string name="delete_someone_data_from_device_int">Delete %@\'s data from this device?</string>
  <string name="Service_unavailable_try_again_later">Service unavailable, try again later</string>
  <string name="Result">Result</string>
  <string name="Back">Back</string>
  <string name="Students_Data">Student\'s Data</string>
  <string name="username_not_valid_or_already_exists">Username is not valid or already exists</string>
  <string name="Ialready_have_account">I already have an account</string>
  <string name="Ask_your_parents">Ask your parents</string>
  <string name="Register_now_ex">Register now!</string>
  <string name="Register_for_free">Register for free</string>
  <string name="Get_access_to_our_Pedagogical_team">Get access to our Pedagogical team</string>
  <string name="Save_your_progress_and_results">Save your progress and results</string>
  <string name="Dont_lost_your_progress">Don\'t lose your progress</string>
  <string name="Get_full_access_to_the_Virtual_World">Get full access to the Virtual World</string>
  <string name="Make_friends_and_compete_against_them">Make friends and compete against them</string>
  <string name="Get_daily_progress_notifications">Get daily progress notifications</string>
  <string name="Try_it_15_days_for_FREE">Try it 15 days for FREE</string>
  <string name="Later">Later</string>
  <string name="email">email</string>
  <string name="Something_went_wrong_try_again_later">Something went wrong, try again later</string>
  <string name="CanRead">Can she/he read?</string>
  <string name="Social_need_email">You need a valid email linked to your social account in order to use it with Smartick</string>
  <string name="Demo">Demo</string>
  <string name="set_language">Set language</string>
  <string name="lang_en">English</string>
  <string name="lang_es">Español</string>
  <string name="lang_es_AR">Español (Argentina)</string>
  <string name="lang_es_BO">Español (Bolivia)</string>
  <string name="lang_es_CL">Español (Chile)</string>
  <string name="lang_es_CO">Español (Colombia)</string>
  <string name="lang_es_EC">Español (Ecuador)</string>
  <string name="lang_es_MX">Español (México)</string>
  <string name="lang_es_PE">Español (Perú)</string>
  <string name="lang_es_UY">Español (Uruguay)</string>
  <string name="lang_es_PY">Español (Paraguay)</string>
  <string name="lang_es_VE">Español (Venezuela)</string>
  <string name="ForgotPassword">Forgot your password?</string>
  <string name="RememberPassword">Remember password</string>
  <string name="RememberSuccess">Password sent succesfully to your email address.</string>
  <string name="RememberFailUser">Incorrect user. Please provide a valid username.</string>
  <string name="RememberFailTutor">Incorrect email. Please provide a valid one.</string>

  <!-- MODIFICACIONES SIN TRADUCCION -->

  <string name="Choose_alias">Choose user</string>
  <string name="Choose_password">Choose password</string>
  <string name="change_tutor">Change tutor</string>
  <string name="no_acount_register_free">Don\'t you have account? Free register</string>
  <string name="login">Log in</string>
  <string name="login_with_fb">Log in with Facebook</string>
  <string name="login_with_google">Log in with Google</string>
  <string name="add_all_students">Add all my students</string>
  <string name="add_new_student">Add registered student</string>
  <string name="register_new_student">Register new student</string>
  <string name="English">English</string>
  <string name="password_too_short">Password is too short</string>

</resources>
