<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/register_modal_background"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center_horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/titleRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:padding="20dp"
        android:text="@string/RememberPassword"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight=".15"
        android:textColor="@color/WhiteColor"/>

    <EditText
        android:id="@+id/editTextRemenberTutorMail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/email"
        android:textColor="@color/WhiteColor"
        android:textColorHint="@color/GrayColor"
        android:background="@color/BlueishGreyColor"
        android:layout_marginLeft="10dp"
        android:inputType="text|textEmailAddress"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/editTextRemenberStudentUsername"
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:layout_height="50dp"
        android:background="@color/BlueishGreyColor"
        android:hint="@string/Username"
        android:textColorHint="@color/GrayColor"
        android:textColor="@color/WhiteColor"
        android:layout_marginTop="5dp"
        android:inputType="text|textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight=".2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:onClick="doRememberPassword"
            android:background="@drawable/orange_confirm_selector"
            android:text="@string/OK"
            android:textSize="24dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:onClick="cancelRememberPassword"
            android:textSize="24dp"
            android:background="@drawable/blue_confirm_selector"
            android:text="@string/Cancel"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>