<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel_login_alumno"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/student_panel_holder"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:weightSum="1"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:text="@string/Add_student"
        android:textSize="@dimen/login_panel_title_text_size"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/login_panel_title_padding_top"
        android:paddingBottom="@dimen/login_panel_title_padding_bottom"
        android:gravity="center_horizontal" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight=".6"
        android:weightSum="1"
        android:gravity="center_vertical">

        <ImageView  android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="@drawable/student_info_icon"
            android:layout_weight=".2"
            android:layout_marginLeft="40dp" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight=".8"
            android:weightSum="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_alias"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_corner"
                android:hint="@string/Alias"
                android:inputType="text"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_corner"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight=".2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:onClick="cancelar"
            android:textSize="30dp"
            android:background="@drawable/blue_confirm_selector"
            android:text="@string/Cancel"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.35"
            android:layout_height="wrap_content"
            android:onClick="checkLoginAlumno"
            android:background="@drawable/orange_confirm_selector"
            android:text="@string/Add"
            android:textSize="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:text="@string/ForgotPassword"
        android:textSize="18dp"
        android:textColor="@color/BlueColor"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:onClick="mostrarRecordarPasswordAlumno"
        android:clickable="true"
        android:gravity="center_horizontal" />

</LinearLayout>