<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/register_modal_background"
    android:padding="30dp">


    <TextView
        android:id="@+id/titleWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/Warning"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/WhiteColor"/>

    <TextView
        android:id="@+id/textFreemiumWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/BlueColor"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/titleWarning"
        android:text="content register"/>


    <Button
        android:id="@+id/freemiumWarningVWButton"
        android:layout_below="@id/textFreemiumWarning"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/green_confirm_selector"
        android:text="@string/Access_Virtual_World"
        android:textSize="25dp"
        android:clickable="true"
        android:onClick="freemiumWarningVWButtonPressed"
        android:layout_centerHorizontal="true"
        android:textColor="@color/WhiteColor"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/freemiumWarningRestartButton"
        android:layout_below="@id/freemiumWarningVWButton"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_confirm_selector"
        android:text="@string/Restart_session"
        android:textSize="25dp"
        android:clickable="true"
        android:onClick="freemiumWarningRestartPressed"
        android:textColor="@color/WhiteColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/freemiumWarningCancelButton"
        android:layout_below="@id/freemiumWarningRestartButton"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_confirm_selector"
        android:text="@string/Cancel"
        android:textSize="25dp"
        android:onClick="freemiumWarningCancelPressed"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/WhiteColor"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>